--- a/introduction-to-statistics.bib
+++ b/introduction-to-statistics.bib
@@ -3,3 +3,10 @@
   author={Tan, Pang-Ning and Steinbach, Michael and Kumar, Vipin},
   year={2006}
 }
+
+@book{kahneman2011thinking,
+  title={Thinking, fast and slow},
+  author={Kahneman, Daniel},
+  year={2011},
+  publisher={Macmillan}
+}
